--- a/css/yena.css
+++ b/css/yena.css
@@ -84,7 +84,8 @@
 .hotspot .swiper-slide-active img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   transition: transform 0.4s ease-in-out;
 }
 .hotspot .swiper-slide-active img.active {
