--- a/css/same.css
+++ b/css/same.css
@@ -132,3 +132,11 @@ div, dl, ol, ul, li, h1, h2, h3, h4, h5, h6, p {
 .p100 {
   padding: 6.25rem 0;
 }
+
+.same_btn {
+  width:100%;
+  max-width:230px;
+  padding:10px 0;
+  border-radius:50px;
+  font-weight:700;
+}
