--- a/css/yena.css
+++ b/css/yena.css
@@ -11,20 +11,53 @@
   line-height: 2;
 }
 
-/* YouTube 컨테이너 */
-.youtube-container {
-  position: relative;
-  height: 0;
-  padding-bottom: 56.25%;
-  border-radius: 10px;
-  overflow: hidden;
+/* 소슬 띠배너 관련 스타일 */
+.sosul_banner {
+  padding: 40px 0;
 }
-.youtube-container iframe {
+.sosul_banner .sub_tit {
+  padding-bottom: 20px;
+  font-weight: 700;
+}
+.sosul_banner .same_btn {
+  background: #fff;
+  border: none;
+}
+.sosul_banner .text-center {
+  position: relative;
+  z-index: 1;
+}
+
+.sosul_banner.apricot_bg {
+  background: url("../img/image/banner1.jpg") no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.sosul_banner.apricot_bg::before {
   position: absolute;
-  top: 0;
-  left: 0;
+  content: "";
   width: 100%;
   height: 100%;
+  background: rgb(214, 139, 48);
+  top: 0;
+  left: 0;
+  opacity: 0.8;
+}
+
+.sosul_banner.organic_bg {
+  background: url("../img/image/banner2.jpg") no-repeat;
+  background-size: cover;
+  position: relative;
+}
+.sosul_banner.organic_bg::before {
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: rgb(63, 66, 47);
+  top: 0;
+  left: 0;
+  opacity: 0.8;
 }
 
 /* 핫스팟 관련 스타일 */
@@ -236,6 +269,22 @@
 }
 .magazin .magazin-button-next::after, .magazin .magazin-button-prev::after {
   display: none;
+}
+
+/* YouTube 컨테이너 */
+.youtube-container {
+  position: relative;
+  height: 0;
+  padding-bottom: 56.25%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+.youtube-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 
 /* YouTube 관련 스타일 */
