--- a/css/yena.scss
+++ b/css/yena.scss
@@ -9,23 +9,63 @@
 .basic_txt {
     line-height: 2;
 }
-  
-/* YouTube 컨테이너 */
-.youtube-container {
-    position: relative;
-    height: 0;
-    padding-bottom: 56.25%;
-    border-radius: 10px;
-    overflow: hidden;
-  
-    iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+
+
+/* 소슬 띠배너 관련 스타일 */
+.sosul_banner {
+    padding:40px 0;
+    .sub_tit {
+        padding-bottom:20px;
+        font-weight: 700;
+    }
+    .same_btn {
+        background:#fff;
+        border:none;
+    }
+
+    .text-center {
+        position: relative;
+        z-index: 1;
     }
 }
+
+.sosul_banner{
+    &.apricot_bg{
+        background:url('../img/image/banner1.jpg') no-repeat;
+        background-size:cover;
+        position:relative;
+        &::before {
+            position:absolute;
+            content: "";
+            width:100%;
+            height:100%;
+            background: rgba(214, 139, 48, 1);
+            top:0;
+            left:0;
+            opacity: 0.8;
+        }
+    }
+}
+
+.sosul_banner{
+    &.organic_bg{
+        background:url('../img/image/banner2.jpg') no-repeat;
+        background-size:cover;
+        position:relative;
+        &::before {
+            position:absolute;
+            content: "";
+            width:100%;
+            height:100%;
+            background:rgba(63, 66, 47, 1);
+            top:0;
+            left:0;
+            opacity: 0.8;
+        }
+    }
+}
+
+
   
 /* 핫스팟 관련 스타일 */
 .hotspot {
@@ -267,7 +307,26 @@
         display: none;
     }
 }
+
+
+/* YouTube 컨테이너 */
+.youtube-container {
+    position: relative;
+    height: 0;
+    padding-bottom: 56.25%;
+    border-radius: 10px;
+    overflow: hidden;
   
+    iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+    }
+}
+
+
 /* YouTube 관련 스타일 */
 .youtube {
     .container {
