--- a/css/chaeun.css
+++ b/css/chaeun.css
@@ -1,6 +1,6 @@
 
  /* background: url('../img/image/banner2.jpg') no-repeat center; */
-.notice {
+.main_notice {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -34,139 +34,4 @@
   font-weight: 500;
   color: #777;
   white-space: nowrap;
-  padding: 5px 10px;
-}
-
-#btm_icon {
-  max-width: 3.125rem;
-  max-height: 3.125rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-#btm_icon{
-max-width: 3.125rem;
-max-height: 3.125rem;
-}
-
-footer{
-display: flex;
-padding: 2.5rem;
-flex-direction: column;
-align-items: center;
-align-self: stretch;
-background: #F6F6F6;
-}
-
-footer p{
-max-width: 53.375rem;
-max-height: 4.375rem;
-color: #444;
-font-size: 0.875rem;
-font-weight: 500;
-line-height: 1.875rem; 
-letter-spacing: -0.018rem;
-}
-
-.notice-container{
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  align-self: stretch;
-  border-top: 0.063rem solid #DDD;
-  border-bottom: 0.063rem solid #DDD;
-
-}
-.ft_container{
-  display: flex;
-  width: 1440px;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 2.5rem;
-}
-
-.btm_info_box{
-  display: flex;
-  max-width: 90rem;
-  flex-direction: column;
- gap: 1.875rem;
- padding-bottom:2.5rem;
- border-bottom: 0.063rem solid #DDD;
-}
-
-.btm_menu
-{ display: flex;
-  justify-content: space-between;
-}
-.btm_menu_box{
-  color: #000;
-  font-size: 0.75rem;
-  font-weight: 800;
-  justify-content: flex-start;
-  display: flex;
-  align-items: center;
-  gap: 1.875rem;
-}
-
-.sns{
-  display: flex;
-align-items: center;
-gap: 1.25rem;
-
-}
-.sns>li{
-  color: #777;
-  font-size: 0.75rem;
-  font-weight: 700;
-  letter-spacing: 0.015rem;
-}
-
-.sns_icon_box{ 
-  display: flex;
-  align-items: center;
-  gap: 0.938rem;
-}
-
-.btm_btm{
-  display: flex;
-  max-width: 90rem;
-  justify-content: space-between;
-}
-
-#btm_copy{
-  margin-top: 2.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  gap: 1.25rem;
-  color: #444;
-  font-size: 0.875rem;
-  font-weight: 500;
-  letter-spacing: 0.018rem;
-}
-.app_down{
-  display: flex;
-align-items: center;
-gap: 0.75rem;
-}
-.app_down>li{
-  color: #777;
-font-size: 0.75rem;
-font-weight: 700;
-letter-spacing: -0.015;
-}
-.app_icon{
-  display: flex;
-align-items: center;
-gap: 0.313rem;
-}
-
-
-@media (max-width:991px){
-  .btm_menu_box{
-    color: #444;
-  }
 }
