--- a/css/yena.css
+++ b/css/yena.css
@@ -29,7 +29,7 @@
 }
 
 .sosul_banner.apricot_bg {
-  background: url("../img/image/banner1.jpg") no-repeat;
+  background: url("../img/image/banner.jpg") no-repeat center;
   background-size: cover;
   position: relative;
 }
@@ -41,11 +41,11 @@
   background: rgb(214, 139, 48);
   top: 0;
   left: 0;
-  opacity: 0.8;
+  opacity: 0.85;
 }
 
 .sosul_banner.organic_bg {
-  background: url("../img/image/banner2.jpg") no-repeat;
+  background: url("../img/image/banner2.jpg") no-repeat center;
   background-size: cover;
   position: relative;
 }
@@ -57,7 +57,7 @@
   background: rgb(63, 66, 47);
   top: 0;
   left: 0;
-  opacity: 0.8;
+  opacity: 0.85;
 }
 
 /* 핫스팟 관련 스타일 */
@@ -351,4 +351,203 @@
 }
 .youtube .youtube_btns .youtube-button-next::after, .youtube .youtube_btns .youtube-button-prev::after {
   display: none;
+}
+
+/* more 관련 스타일 */
+.more .more_box {
+  width: 49%;
+  margin-right: 2%;
+  padding: 40px;
+  border-radius: 10px;
+}
+@media (max-width: 991px) {
+  .more .more_box {
+    width: 100%;
+    margin: 0 0 20px 0;
+    padding: 20px;
+  }
+}
+.more .more_box:last-child {
+  margin-right: 0;
+}
+@media (max-width: 991px) {
+  .more .more_box:last-child {
+    margin-bottom: 0;
+  }
+}
+.more .more_box .more_info {
+  width: 49%;
+  margin-right: 2%;
+}
+@media (max-width: 991px) {
+  .more .more_box .more_info {
+    order: 1;
+    width: 100%;
+    margin-right: 0;
+    padding-top: 20px;
+  }
+}
+.more .more_box img {
+  width: 49%;
+  height: auto;
+  margin-right: 0;
+  border-radius: 10px;
+}
+@media (max-width: 991px) {
+  .more .more_box img {
+    width: 100%;
+    order: 0;
+  }
+}
+.more .more_txt_box {
+  padding-bottom: 60px;
+}
+@media (max-width: 991px) {
+  .more .more_txt_box {
+    padding-bottom: 20px;
+  }
+}
+.more .sub_tit {
+  font-weight: 800;
+}
+.more .same_btn {
+  background: none;
+  font-weight: 600;
+}
+@media (max-width: 991px) {
+  .more .same_btn {
+    max-width: none;
+  }
+}
+.more .when .same_btn {
+  border: 1px solid #B6996F;
+  color: #B6996F;
+}
+.more .when .same_btn:hover {
+  background: #B6996F;
+  color: #fff;
+}
+.more .where {
+  background: #f6f6f6;
+}
+.more .where .same_btn {
+  border: 1px solid #777;
+  color: #777;
+}
+.more .where .same_btn:hover {
+  background: #777;
+  color: #fff;
+}
+
+/* notive 부분 스타일 */
+.notice_tit {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  margin-left: 1rem;
+}
+
+/* footer */
+.footer {
+  padding: 40px 0;
+  background: #f6f6f6;
+}
+.footer .btm_info_box {
+  position: relative;
+}
+@media (max-width: 991px) {
+  .footer .btm_menu_box {
+    width: 100%;
+  }
+}
+.footer .btm_menu_box a {
+  padding: 10px;
+  margin-right: 10px;
+  font-weight: 800;
+}
+@media (max-width: 991px) {
+  .footer .btm_menu_box a {
+    width: 50%;
+    margin-right: 0;
+    padding: 10px 0;
+  }
+}
+.footer .btm_logo {
+  margin-right: 30px;
+}
+.footer .btm_txt {
+  padding: 30px 0;
+  border-bottom: 1px solid #ddd;
+}
+@media (max-width: 991px) {
+  .footer .btm_txt {
+    padding: 5px 0 20px;
+  }
+}
+.footer .btm_txt .btm_txt_in {
+  display: block;
+  padding-top: 10px;
+  letter-spacing: -0.5px;
+}
+.footer .btm_txt .btm_txt_in:first-child {
+  padding-top: 0;
+}
+.footer .btm_txt .btm_txt_in span {
+  padding: 0 5px;
+  color: #aaa;
+}
+.footer .btm_btm {
+  padding-top: 30px;
+}
+@media (max-width: 991px) {
+  .footer .btm_btm {
+    padding-top: 0;
+  }
+}
+@media (max-width: 991px) {
+  .footer .btm_copy {
+    order: 1;
+  }
+}
+.footer .copyright {
+  padding-top: 15px;
+}
+.footer .btm_link_tit {
+  padding-right: 20px;
+  font-weight: 700;
+}
+.footer .icon_area {
+  width: 36px;
+  height: 36px;
+  margin-left: 10px;
+  display: block;
+  text-align: center;
+  line-height: 36px;
+}
+.footer .sns {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+@media (max-width: 991px) {
+  .footer .sns {
+    position: relative;
+    justify-content: space-between;
+    padding: 20px 0;
+    border-bottom: 1px solid #ddd;
+  }
+}
+.footer .sns .icon_area:first-child {
+  margin-left: 0;
+}
+@media (max-width: 991px) {
+  .footer .app_down {
+    width: 100%;
+    order: 0;
+    justify-content: space-between;
+    padding: 20px 0;
+  }
+}
+.footer .app_down .icon_area {
+  margin-left: 0;
 }
