--- a/css/yena.scss
+++ b/css/yena.scss
@@ -31,7 +31,7 @@
 
 .sosul_banner{
     &.apricot_bg{
-        background:url('../img/image/banner1.jpg') no-repeat;
+        background:url('../img/image/banner.jpg') no-repeat center;
         background-size:cover;
         position:relative;
         &::before {
@@ -42,14 +42,14 @@
             background: rgba(214, 139, 48, 1);
             top:0;
             left:0;
-            opacity: 0.8;
+            opacity: 0.85;
         }
     }
 }
 
 .sosul_banner{
     &.organic_bg{
-        background:url('../img/image/banner2.jpg') no-repeat;
+        background:url('../img/image/banner2.jpg') no-repeat center;
         background-size:cover;
         position:relative;
         &::before {
@@ -60,7 +60,7 @@
             background:rgba(63, 66, 47, 1);
             top:0;
             left:0;
-            opacity: 0.8;
+            opacity: 0.85;
         }
     }
 }
@@ -326,7 +326,6 @@
     }
 }
 
-
 /* YouTube 관련 스타일 */
 .youtube {
     .container {
@@ -398,5 +397,212 @@
     }
   
     
+}
+
+
+
+/* more 관련 스타일 */
+.more {
+    .more_box {
+        width:49%;
+        margin-right:2%;
+        padding:40px;
+        border-radius:10px;
+        @media (max-width:991px) {
+            width:100%;
+            margin:0 0 20px 0;
+            padding:20px;
+        }
+        &:last-child {
+            margin-right:0;
+            @media (max-width:991px) {
+                margin-bottom:0;
+            }
+        }
+        .more_info {
+            width:49%;
+            margin-right:2%;
+            @media (max-width:991px) {
+                order:1;
+                width:100%;
+                margin-right:0;
+                padding-top:20px;
+            }
+        }
+        img {
+            width:49%;
+            height:auto;
+            margin-right:0;
+            border-radius:10px;
+            @media (max-width:991px) {
+                width:100%;
+                order:0;
+            }
+        }
+    }
+
+    .more_txt_box {
+        padding-bottom:60px;
+        @media (max-width:991px) {
+            padding-bottom:20px;
+        }
+    }
+
+
+    .sub_tit {
+        font-weight: 800;
+    }
+
+    .same_btn {
+        background:none;
+        font-weight:600;
+        @media (max-width:991px) {
+            max-width:none;
+        }
+    }
+
+    .when {
+        .same_btn {
+            border: 1px solid #B6996F;
+            color: #B6996F;
+            &:hover {
+                background:#B6996F;
+                color:#fff;
+            }
+        }
+    }
+
+    .where {
+        background:#f6f6f6;
+        .same_btn {
+            border: 1px solid #777;
+            color :#777;
+            &:hover {
+                background:#777;
+                color:#fff;
+            }
+        }  
+    }
+}
+
+
+
+/* notive 부분 스타일 */
+.notice_tit {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    margin-left:1rem;
+}
+
+
+
+/* footer */
+.footer {
+    padding:40px 0;
+    background:#f6f6f6;
+
+    .btm_info_box {
+        position: relative;
+    }
+
+    .btm_menu_box {
+        @media (max-width:991px) {
+            width:100%;
+        }
+        a{
+            padding:10px;
+            margin-right:10px;
+            font-weight: 800;
+            @media (max-width:991px) {
+                width:50%;
+                margin-right:0;
+                padding:10px 0;
+            }
+        }
+    }
+
+    .btm_logo {
+        margin-right:30px;
+    }
+
+    .btm_txt {
+        padding:30px 0;
+        border-bottom:1px solid #ddd;
+        @media (max-width:991px) {
+            padding:5px 0 20px;
+        }
+        .btm_txt_in {
+            display: block;
+            padding-top:10px;
+            letter-spacing: -0.5px;
+            &:first-child {
+                padding-top:0;
+            }
+            span {
+                padding:0 5px;
+                color:#aaa;
+            }
+        }
+    }
+
+    .btm_btm {
+        padding-top:30px;
+        @media (max-width:991px) {
+            padding-top:0;
+        }
+    }
+
+    .btm_copy {
+        @media (max-width:991px) {
+            order:1;
+        }
+    }
+
+    .copyright {
+        padding-top:15px;
+    }
+
+    .btm_link_tit {
+        padding-right:20px;
+        font-weight:700;
+    }
+
+    .icon_area {
+        width:36px;
+        height:36px;
+        margin-left:10px;
+        display:block;
+        text-align: center;
+        line-height:36px;
+    }
+
+    .sns {
+        position: absolute;
+        top:0; right:0;
+        @media (max-width:991px) {
+            position: relative;
+            justify-content: space-between;
+            padding:20px 0;
+            border-bottom:1px solid #ddd;
+        }
+        .icon_area {
+            &:first-child {
+                margin-left:0;
+            }
+        } 
+    }
+
+    .app_down {
+        @media (max-width:991px) {
+            width: 100%;
+            order:0;
+            justify-content: space-between;
+            padding:20px 0;
+        }
+        .icon_area {
+            margin-left:0;
+        }
+    }
 }
   
