250205_헤더 반응형 작업

--- a/css/eunjeong.css
+++ b/css/eunjeong.css
@@ -268,5 +268,10 @@ h1 a img {
         width:95%;
     }
 
+    .video-bg video {
+        width: 100%;  /* 화면 너비의 80% */
+        height: auto; /* 비율 유지 */
+        max-height: 80vh;
+    }
 }
     
