--- a/css/eunjeong.css
+++ b/css/eunjeong.css
@@ -72,7 +72,7 @@ a {
 .video-container {
   position: relative;
   max-width: 100%;
-  height: 54.375rem;
+  height: calc(100vh - 80px);
   margin: 0 auto;
   justify-content: center;
   align-items: center;
@@ -84,10 +84,13 @@ a {
 .video-bg {
   position: absolute;
   max-width: 112.375rem;
-  height: 54.375rem;
-  top: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
   border-radius: 0.625rem;
-  transform: translateY(-50%);
   z-index: -1;
   -webkit-clip-path: inset(0 round 0.625rem);
           clip-path: inset(0 round 0.625rem);
