--- a/css/eunjeong.scss
+++ b/css/eunjeong.scss
@@ -80,7 +80,7 @@ a {
 .video-container {
   position: relative;
   max-width: 100%;
-  height: 54.375rem; // 870px
+  height: calc(100vh - 80px); 
   margin: 0 auto;
   @extend .d-flex;
   justify-content: center;
@@ -93,10 +93,13 @@ a {
 .video-bg {
   position: absolute;
   max-width: 112.375rem; // 1798px
-  height: 54.375rem; // 870px
-  top: 50%;
+  height: 100%; // 870px
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  width: 100%;
   border-radius: 0.625rem; // 10px
-  transform: translateY(-50%);
   z-index: -1;
   clip-path: inset(0 round 0.625rem); // 10px
 }
