--- a/css/same.css
+++ b/css/same.css
@@ -65,7 +65,7 @@ dl, ol, ul {
   font-size: var(--point_txt, 0.75rem);
 }
 
-.organic_bg {
+.organic {
   color: var(--main_color, rgb(63, 66, 47));
 }
 
