--- a/css/eunjeong.scss
+++ b/css/eunjeong.scss
@@ -98,7 +98,7 @@ a {
   left: 0;
   right: 0;
   margin: auto;
-  width: 100%;
+  width: calc(100% - 30px);
   border-radius: 0.625rem; // 10px
   z-index: -1;
   clip-path: inset(0 round 0.625rem); // 10px
@@ -269,12 +269,7 @@ h1 a img {
     height: 21.875rem; 
   }
   
-  .video-bg video {
-    width: 90vw;
-    max-width: 100%;
-    height: 21.875rem; 
-    object-fit: cover;
-  }
+
 
 //   .video-bg video {
 //     width: 90vw;
