--- a/css/jaeeun.css
+++ b/css/jaeeun.css
@@ -255,3 +255,57 @@
 .all-btn:hover {
     background-color: var(--gray_4, rgb(221, 221, 221));
 }
+
+
+
+
+.nowSwiper, .mSwiper{
+    max-width:1920px;
+    margin: 0 auto;
+}
+
+.nowSwiper .swiper {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto
+}
+.nowSwiper .swiper-wrapper{
+    display: flex;
+    
+}
+.nowSwiper .swiper-slide {
+
+  font-size: 18px;
+  background: #fff;
+  height: calc((100% - 30px) / 2) !important;
+
+  /* Center slide text vertically */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.nowSwiper .swiper-slide img{
+    width:100%
+}
+.box1{
+    padding: 12px;
+}
+.box2{
+    padding: 12px;
+}
+.img1, .img2, .img3, .img4, .img5, .img6, .img7{
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+}
+/* Swiper 컨테이너를 상대적 위치로 설정 */
+.nowSwiper .mySwiper {
+position: relative;
+}
+.mSwiper {
+position: relative;
+}
+
+
