--- a/css/same.css
+++ b/css/same.css
@@ -26,11 +26,11 @@ body {
   font-family: var(--font-family, "Suit", sans-serif);
 }
 
-div, dl, ol, ul, li, h1, h2, h3, h4, h5, h6, p {padding: 0; margin: 0;}
+div, dl, ol, ul, li, h1, h2, h3, h4, h5, h6, p, button {padding: 0; margin: 0;}
 
 /* container */
 .container_full {max-width:var(--container_full, 1800px); margin:0 auto; padding:0; width:100%;}
-.container {max-width:var(--container, 1440px); margin:0 auto; padding:0; position:relative;}
+.container {max-width:var(--container, 1440px); margin:0 auto; padding:0; position:relative; width:100%;}
 
 /* font */
 .main_tit {font-size:var(--main_tit, 2.125rem);}
@@ -78,4 +78,10 @@ div, dl, ol, ul, li, h1, h2, h3, h4, h5, h6, p {padding: 0; margin: 0;}
   border-radius:50px;
   font-weight:700;
   letter-spacing: -1px;
+}
+
+
+@media (max-width:991px) {
+  .container_full {width:94%;}
+  .container {width:94%;}
 }
