--- a/css/yena.scss
+++ b/css/yena.scss
@@ -10,6 +10,10 @@
     line-height: 2;
 }
 
+.point_txt {
+    letter-spacing: -1px;
+}
+
 
 /* 소슬 띠배너 관련 스타일 */
 .sosul_banner {
@@ -71,6 +75,19 @@
 .hotspot {
     .main_tit {
         text-align: center;
+        @media (max-width:991px) {
+            text-align:left;
+            width:94%;
+            margin:0 auto;
+        }
+    }
+
+    .point_txt {
+        padding-bottom: 0.625rem;
+        @media (max-width:991px) {
+            width:94%;
+            margin:0 auto;
+        }
     }
 
     .container {
@@ -105,6 +122,10 @@
         position: relative;
         transition: all 0.4s ease-in-out;
         box-sizing: border-box;
+
+        @media (max-width:991px) {
+            margin-right: 1.49rem;
+        }
         
         &::after {
           position: absolute;
@@ -338,6 +359,19 @@
   
     .main_tit {
       text-align: center;
+      @media (max-width:991px) {
+        text-align:left;
+        width:94%;
+        margin:0 auto;
+      }
+    }
+
+    .point_txt {
+        padding-bottom: 0.625rem;
+        @media (max-width:991px) {
+            width:94%;
+            margin:0 auto;
+          }
     }
   
     .basic_txt {
@@ -448,9 +482,12 @@
         }
     }
 
-
     .sub_tit {
         font-weight: 800;
+    }
+
+    .point_txt {
+        padding-bottom: 0.625rem;
     }
 
     .same_btn {
@@ -509,6 +546,7 @@
     .btm_menu_box {
         @media (max-width:991px) {
             width:100%;
+            margin:10px 0;
         }
         a{
             padding:10px;
