--- a/css/same.css
+++ b/css/same.css
@@ -37,6 +37,7 @@ div, dl, ol, ul, li, h1, h2, h3, h4, h5, h6, p, button {padding: 0; margin: 0;}
 .sub_tit {font-size:var(--sub_tit, 1.5rem);}
 .list_tit {font-size:var(--list_tit, 1.25rem);}
 .basic_txt {font-size:var(--basic_txt, 1rem);}
+.sub_txt {font-size:var(--basic_txt, 0.875rem);}
 .point_txt {font-size:var(--point_txt, 0.75rem);}
 
 /* color */
@@ -84,4 +85,5 @@ div, dl, ol, ul, li, h1, h2, h3, h4, h5, h6, p, button {padding: 0; margin: 0;}
 @media (max-width:991px) {
   .container_full {width:94%;}
   .container {width:94%;}
+  .p100 {padding:50px 0;}
 }
